--- a/trunk/Dialify/AndroidManifest.xml
+++ b/trunk/Dialify/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.hyperbard.dialify" android:versionCode="6"
+	package="org.hyperbard.dialify" android:versionCode="6"
 	android:versionName="1.0">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name=".Dialify" android:label="@string/app_name">
